# OT2

./: .gitignore  298069.py  README.md  runlog_check.py  test_deckcal_apiv2_py (3).py  test_protocol.py
calibration_checks/: 210726_OT-2 Robot Calibration Check Report.json
designer_test_programs/: transfer.json
labware/: available_labware_dimensions.txt  greinerbio_6_tuberack_50000ul.json  labware_offset_snippets.py  list_of_available_labware
modules/: disposal_volume.py  volume_tracking.py
mollab_modules/: README.md  pyproject.toml  setup.cfg  setup.py  volume_tracking.py  volume_tracking_v1.py  volume_tracking_v2.py
mollab_modules/volume_tracking/: __init__.py
mollab_protocols/: 2104.._eDNA_fish_testPCR_diluted_samples.py  210413_eDNA_fish_testPCR.py  210430_eDNA_fish_testPCR_diluted_samples.py  Aliquoting_in_different_labware.py  General_PCR_protocol.py  General_PCR_protocol_EVE.py  General_qPCR_protocol.py  Userinterface_for_TapeStation.py  adding_dilution_serie.py  adding_dilution_serie_parameterstest.py  calibration_check.py  calibration_check_1.5mL_tubes.py  contamination_test.py  contamination_test_2.py  diluting_different_volumes.py  equimolar_pooling_template.py  illu_PCR_mix_primers.py  illu_primer_12S_6_aliquots.py  illu_primer_aliquot_1_rack_at_a_time.py  labware_offsets_for_simulate.csv  nomenclature.txt  sample_dilution_template.py  simulate_protocol.py  volume_tracking_test.py
mollab_snippets/: column_loop_test.py  complex_command_transfer_tubes_to_strips.py  dispense_and_mix.py  load_5mL_custom_for_simulator.py  looping_trough_columns.py  (+7 more)
(+325 files in other folders)
