[metadata]
name = MolLab
version = 1.0
author = Sanne Vreugdenhil & Maartje Brouwer
author_email = mollab@nioz.nl
description = Our custom package for OT2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MolLabNIOZ/OT2/tree/main/mollab_modules
project_urls =
    Bug Tracker = https://github.com/MolLabNIOZ/OT2/tree/main/mollab_modules
classifiers =
    Programming Language :: Python :: 3
    License :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src